Bug 94237 - LOOL: invalidation when applying a font
Summary: LOOL: invalidation when applying a font
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-15 09:30 UTC by Mihai Varga
Modified: 2015-09-15 20:06 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Invalidation problem (88.48 KB, image/png)
2015-09-15 09:30 UTC, Mihai Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mihai Varga 2015-09-15 09:30:47 UTC
Created attachment 118733 [details]
Invalidation problem

When applying the 'Droid Arabic Naskh' font to the 'elements' word, a too small invalidation occurs that leaves out an invalid part of the document, then the whole document is invalidated.

The result and the invalidation command can be seen in the screenshot. The height of the invalidation is just 789 twips, that is 1/4 of a tile, so just a single tile gets invalidated vertically.